<resources>
    <string name="app_name">Snackbar</string>


    <!-- String Login -->
    <string name="til_username">Nome do usuário</string>
    <string name="til_password">Senha</string>
    <string name="btn_login">Login</string>
    <string name="tv_info">Não tem conta? Cadastre-se</string>
    <string name="btn_cadastrar">Cadastre-se</string>
    <string name="rep_password">Repita a senha</string>
    <string name="tv_info_cadastro">Já possui conta? Faça login.</string>
    <string name="hintEmail">E-mail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>