<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="510dp"
    android:layout_margin="20dp"
    android:background="@drawable/round_login_body"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edUserNameCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/til_username" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp">

            <EditText
                android:id="@+id/edEmailCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hintEmail"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPasswordCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/til_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rep_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_CadConfirm"
        android:text="@string/btn_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_cadastro_button"
        android:textColor="@color/colorWhite"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cadastro_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/tv_info_cadastro" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageViewGoogle"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:src="@drawable/ic_google"
             />

        <ImageView
            android:id="@+id/imageFace"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_facebook"
            />

        <ImageView
            android:id="@+id/imageViewInsta"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_instagram" />

    </LinearLayout>

</LinearLayout>
